--- a/public/index.html
+++ b/public/index.html
@@ -56,13 +56,18 @@
                     persona proactiva, responsable y con ganas de crecer profesionalmente.
                 </p>
                 <div class="d-flex flex-column flex-md-row gap-4 animate__animated animate__bounceInLeft">
-                    <button type="button" class="btn align-items-center">
+                    <button onclick="window.open('https://github.com/Gopi1794', '_blank');" type="button"
+                        class="btn align-items-center">
                         GitHub <i class="uil uil-github fs-3"></i>
                     </button>
-                    <button type="button" class="btn align-items-center">
+                    <button
+                        onclick="window.open('https://www.linkedin.com/in/gabriel-g%C3%B3mez-674510320/', '_blank');"
+                        type="button" class="btn align-items-center">
                         LinkedIn <i class="uil uil-linkedin fs-3"></i>
                     </button>
-                    <button type="button" class="btn align-items-center">
+                    <button
+                        onclick="window.location.href='mailto:gg.developer.full@gmail.com?subject=Consulta&body=Hola,%20quiero%20hacerte%20una%20consulta';"
+                        type="button" class="btn align-items-center">
                         Contáctame <i class="uil uil-envelope-alt fs-3"></i>
                     </button>
                 </div>
