Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -227,7 +227,11 @@
                             una sección donde los ciudadanos pueden registrarse y, si lo desean, añadir a sus
                             familiares. Implementé un panel de administración utilizando PHP para el backend, que
                             permite gestionar y visualizar a todos los usuarios registrados, incluyendo gráficos
-                            interactivos para un mejor análisis de la información.</p>
+                            interactivos para un mejor análisis de la información.
+
+Administración 
+usuario: 38610279
+contraseña:12345</p>
                         <h5 class="text-secondary text-white pt-5">Tecnologías:</h5>
                         <div class="tecnologias d-flex gap-2 flex-wrap">
                             <p><a href="https://www.w3.org/TR/2011/WD-html5-20110405/index.html">HTML5</a></p>
