--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,23 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" sizes="16x16" href="favicon-16x16.png">
     <link rel="icon" sizes="32x32" href="favicon-32x32.png">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-D7HDGD7YZ7"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-D7HDGD7YZ7');
+</script>
 
 <body class="modo-claro">
     <div id="particles-js"></div>
@@ -72,6 +83,9 @@
                     </button>
                 </div>
             </div>
+
+
+
             <!-- Columna de imagen -->
             <div
                 class="circulo-imagen container col-md-5 d-flex justify-content-center animate__animated animate__zoomIn">
@@ -90,6 +104,21 @@
         </div>
     </div>
 
+
+    <div class="swiper">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide"><img src="img/Bootstrap_logo.png" alt="logo_bootstrap"></div>
+            <div class="swiper-slide"><img src="img/css_logo.png" alt="logo_css"></div>
+            <div class="swiper-slide"><img src="img/html_logo.png" alt="logo_html"> </div>
+            <div class="swiper-slide"><img src="img/javascript_logo.png" alt="logo_js"></div>
+            <div class="swiper-slide"><img src="img/php_logo.png" alt="logo_php"> </div>
+            <div class="swiper-slide"><img src="img/MySQL_logo.png" alt="logo_mysql"></div>
+            <div class="swiper-slide"><img src="img/react_logo.png" alt="logo_react"></div>
+            <div class="swiper-slide"><img src="img/vs_logo.png" alt="logo_vs"></div>
+            <div class="swiper-slide"><img src="img/mui_logo.png" alt="logo_mui"></div>
+
+        </div>
+    </div>
 
     <div class="proyectos container text-start w-100">
         <h1 class="text-white">Proyectos</h1>
@@ -214,7 +243,7 @@
                 </div>
             </div>
         </div>
-        <div class="row row justify-content-between align-items-center d-flex ">
+        <div class="row row justify-content-evenly align-items-center d-flex ">
             <div class="col-12 col-md-4 mb-4">
                 <div class="card" style="width: 100%;">
                     <video class="card-img-top" autoplay loop muted>
@@ -228,6 +257,8 @@
                             familiares. Implementé un panel de administración utilizando PHP para el backend, que
                             permite gestionar y visualizar a todos los usuarios registrados, incluyendo gráficos
                             interactivos para un mejor análisis de la información.</p>
+                        <p class="card-text text-white fw-bold">Datos para ingresar como
+                            administrativo<br>CONTRASEÑA: 12345<BR>DNI: 38610279</p>
                         <h5 class="text-secondary text-white pt-5">Tecnologías:</h5>
                         <div class="tecnologias d-flex gap-2 flex-wrap">
                             <p><a href="https://www.w3.org/TR/2011/WD-html5-20110405/index.html">HTML5</a></p>
@@ -249,8 +280,82 @@
                     </div>
                 </div>
             </div>
+            <div class="col-12 col-md-4 mb-4">
+                <div class="card" style="width: 100%;">
+                    <img src="img/dashboard.jpg" alt="">
+                    <div class="wrapper">
+                        <button type="button" id="modal" data-mdb-toggle="modal" data-mdb-target="#staticBackdrop5"
+                            class="experiencia">
+                            ¡Proximamente! ⭐
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </button>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title text-white text-decoration-underline">Dashboard</h5>
+                        <p class="card-text text-white">Estoy usando React, Material UI, Nivo Charts, Formik, Yup,
+                            FullCalendar y Data Grid para construir toda esta aplicación. Esta aplicación incluye modo
+                            claro y oscuro, 4 tipos de gráficos diferentes, 3 páginas de tablas de datos, una página de
+                            preguntas frecuentes (FAQ), una página de formularios y la integración de un calendario.
+                            Pronto estara disponible , mientras pueden ingresar para ver como va.(Solo Escritorio)</h5>
+                        <div class="tecnologias d-flex gap-2 flex-wrap">
+                            <p><a href="https://es.react.dev/">React</a></p>
+
+                            <p><a href="https://getbootstrap.com/">BOOTSTRAP</a></p>
+                            <p><a
+                                    href="https://mui.com/?srsltid=AfmBOopE_BIquO-Np61VBfR9lJd9GyiDH2c9Ok-1beXSVgUaohRYMAwa">MUI</a>
+                            </p>
+                            <p><a href="https://nivo.rocks/">NIVO CHARTS</a></p>
+                        </div>
+
+                        <div class="d-flex btns gap-2 p-2 justify-content-center">
+                            <a target="_blank" href="https://github.com/Gopi1794/Dashboard.git" class="mt-2 w-100 btn">
+                                <i class="uil uil-github"></i>
+                                Codigo</a>
+                            <a target="_blank" href="https://dasboard-91243.web.app/" class="mt-2 w-100 btn">
+                                <i class="uil uil-globe"></i> Enlace</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
     </div>
+
+
+    <form>
+        <div class="text-inicial container mt-5 p-4  justify-content-center col-12">
+            <h2 class="text-white pb-3 text-decoration-underline text-center">Formulario de contacto</h2>
+
+            <div class="row d-flex flex-wrap align-items-center">
+
+                <label for="nombre" class="form-label text-white">Nombre</label>
+                <div class="mb-3 gap-2  align-items-center col-md-12">
+                    <input type="text" aria-label="Nombre" id="nombre" class="form-control">
+                </div>
+                <label for="apellido" class="form-label text-white">Apellido</label>
+                <div class="mb-3 gap-2  align-items-center  col-md-12">
+                    <input type="text" aria-label="Last name" class="form-control">
+                </div>
+
+            </div>
+
+            <div class="mb-3">
+                <label for="email" class="form-label text-white">Correo Electronico</label>
+                <input type="email" class="form-control" id="email" placeholder="nombre@example.com">
+            </div>
+            <div class="mb-3">
+                <label for="mensaje" class="form-label text-white">Mensaje</label>
+                <textarea class="form-control" id="mensaje" rows="3" placeholder="Escriba aqui su consulta"></textarea>
+            </div>
+            <div class="mb-3">
+                <button type="submit" class="btn btn-light w-100">Enviar</button>
+
+            </div>
+        </div>
+    </form>
 
 
 
@@ -266,9 +371,45 @@
         </div>
         <!-- Copyright -->
     </footer>
-
-
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+
+    <script>
+        document.addEventListener("mousemove", (event) => {
+            const box = document.querySelector(".circle");
+            box.style.transform = `translate(${event.clientX}px, ${event.clientY}px)`;
+        });
+    </script>
+
+    <script>
+        var swiper = new Swiper('.swiper', {
+            slidesPerView: items(),
+            grabCursor: true,
+            autoplay: {
+                delay: 0,
+                disableOnInteraction: false,
+
+            },
+            speed: 3000,
+            freeMode: true,
+            freeModeMomentum: false,
+            loop: true,
+            spaceBetween: 30,
+            direction: 'horizontal',
+        });
+
+        function items() {
+            var windowWidth = window.innerWidth;
+            var items = 5;
+            if (windowWidth < 700) {
+                items = 3;
+            }
+            if (windowWidth < 400) {
+                items = 2;
+            }
+            return items;
+        }
+    </script>
     <script>
         particlesJS('particles-js', {
             particles: {
