--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
             <nav class="col-xl-6">
                 <ul class="nav-links">
                     <li><a href="#platform">PROYECTOS</a></li>
-                    <li><a href="#customers">CONTACTOS</a></li>
+                    <li><a href="#customers">CONTACTO</a></li>
                     <li>
                         <button type="button" class="btn" onclick="cambiarEstilo()">
                             <i class="uil uil-sun sol"></i>
@@ -90,7 +90,7 @@
             <div
                 class="circulo-imagen container col-md-5 d-flex justify-content-center animate__animated animate__zoomIn">
                 <div class="img-circulo d-flex justify-content-center align-items-center ">
-                    <img class="fondo-circulo" src="img/yo.png" alt="">
+                    <img class="fondo-circulo" src="img/yo.webp" alt="">
                     <video class="video" autoplay loop muted>
                         <source src="video/yo.mp4" type="video/mp4">
                         Tu navegador no soporta el video.
@@ -107,15 +107,15 @@
 
     <div class="swiper">
         <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="img/Bootstrap_logo.png" alt="logo_bootstrap"></div>
-            <div class="swiper-slide"><img src="img/css_logo.png" alt="logo_css"></div>
-            <div class="swiper-slide"><img src="img/html_logo.png" alt="logo_html"> </div>
-            <div class="swiper-slide"><img src="img/javascript_logo.png" alt="logo_js"></div>
-            <div class="swiper-slide"><img src="img/php_logo.png" alt="logo_php"> </div>
-            <div class="swiper-slide"><img src="img/MySQL_logo.png" alt="logo_mysql"></div>
-            <div class="swiper-slide"><img src="img/react_logo.png" alt="logo_react"></div>
-            <div class="swiper-slide"><img src="img/vs_logo.png" alt="logo_vs"></div>
-            <div class="swiper-slide"><img src="img/mui_logo.png" alt="logo_mui"></div>
+            <div class="swiper-slide"><img src="img/Bootstrap_logo.webp" alt="logo_bootstrap"></div>
+            <div class="swiper-slide"><img src="img/css_logo.webp" alt="logo_css"></div>
+            <div class="swiper-slide"><img src="img/html_logo.webp" alt="logo_html"> </div>
+            <div class="swiper-slide"><img src="img/javascript_logo.webp" alt="logo_js"></div>
+            <div class="swiper-slide"><img src="img/php_logo.webp" alt="logo_php"> </div>
+            <div class="swiper-slide"><img src="img/MySQL_logo.webp" alt="logo_mysql"></div>
+            <div class="swiper-slide"><img src="img/react_logo.webp" alt="logo_react"></div>
+            <div class="swiper-slide"><img src="img/vs_logo.webp" alt="logo_vs"></div>
+            <div class="swiper-slide"><img src="img/mui_logo.webp" alt="logo_mui"></div>
 
         </div>
     </div>
@@ -278,19 +278,12 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-4 mb-4">
-                <div class="card" style="width: 100%;">
-                    <img src="img/dashboard.jpg" alt="">
-                    <div class="wrapper">
-                        <button type="button" id="modal" data-mdb-toggle="modal" data-mdb-target="#staticBackdrop5"
-                            class="experiencia">
-                            ¡Proximamente! ⭐
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                        </button>
-                    </div>
+            <div class="col-12 col-md-4 mb-4  height: max-content;">
+                <div class="card" style="width: 100%; ">
+                    <video class="card-img-top" autoplay loop muted>
+                        <source src="video/ReactAdmin.mp4" type="video/mp4">
+                        Tu navegador no soporta el video.
+                    </video>
                     <div class="card-body">
                         <h5 class="card-title text-white text-decoration-underline">Dashboard</h5>
                         <p class="card-text text-white">Estoy usando React, Material UI, Nivo Charts, Formik, Yup,
@@ -300,7 +293,6 @@
                             Pronto estara disponible , mientras pueden ingresar para ver como va.(Solo Escritorio)</h5>
                         <div class="tecnologias d-flex gap-2 flex-wrap">
                             <p><a href="https://es.react.dev/">React</a></p>
-
                             <p><a href="https://getbootstrap.com/">BOOTSTRAP</a></p>
                             <p><a
                                     href="https://mui.com/?srsltid=AfmBOopE_BIquO-Np61VBfR9lJd9GyiDH2c9Ok-1beXSVgUaohRYMAwa">MUI</a>
@@ -318,42 +310,89 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col-12 col-md-4 mb-4">
+                <div class="card" style="width: 100%;">
+                    <img src="img/proximamente.png" alt="">
+                    <div class="wrapper">
+                        <button type="button" id="modal" data-mdb-toggle="modal" data-mdb-target="#staticBackdrop5"
+                            class="experiencia">
+                            ¡Proximamente! ⭐
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </button>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title text-white text-decoration-underline">Gestión de inventarios</h5>
+                        <p class="card-text text-white">
+                            Estoy desarrolando un panel de control para la gestión de inventarios utilizando Next.js,
+                            con una
+                            interfaz moderna diseñada con Tailwind CSS. El backend está construido con Node.js y utiliza
+                            PostgreSQL como base de datos para un manejo eficiente de los datos.</h5>
+                        <div class="tecnologias d-flex gap-2 flex-wrap">
+                            <p><a href="https://es.react.dev/">React</a></p>
+
+                            <p><a href="https://getbootstrap.com/">Next.js</a></p>
+                            <p><a
+                                    href="https://mui.com/?srsltid=AfmBOopE_BIquO-Np61VBfR9lJd9GyiDH2c9Ok-1beXSVgUaohRYMAwa">MUI</a>
+                            </p>
+                            <p><a href="https://www.postgresql.org/">Postgres</a></p>
+                            <p><a href="https://tailwindcss.com/">Tailwind</a></p>
+                            <p><a href="https://aws.amazon.com/es/">Amazon Web Services</a></p>
+
+                        </div>
+
+                        <div class="d-flex btns gap-2 p-2 justify-content-center">
+                            <a target="_blank" href="https://github.com/Gopi1794/Dashboard.git" class="mt-2 w-100 btn">
+                                <i class="uil uil-github"></i>
+                                Codigo</a>
+                            <a target="_blank" href="https://dasboard-91243.web.app/" class="mt-2 w-100 btn">
+                                <i class="uil uil-globe"></i> Enlace</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div>
 
 
-    <form>
-        <div class="text-inicial container mt-5 p-4  justify-content-center col-12">
+    <form action="https://formsubmit.co/gg.developer.full@gmail.com" method="POST">
+        <div class="text-inicial container mt-5 p-4 justify-content-center col-12">
             <h2 class="text-white pb-3 text-decoration-underline text-center">Formulario de contacto</h2>
 
             <div class="row d-flex flex-wrap align-items-center">
-
                 <label for="nombre" class="form-label text-white">Nombre</label>
-                <div class="mb-3 gap-2  align-items-center col-md-12">
-                    <input type="text" aria-label="Nombre" id="nombre" class="form-control">
-                </div>
-                <label for="apellido" class="form-label text-white">Apellido</label>
-                <div class="mb-3 gap-2  align-items-center  col-md-12">
-                    <input type="text" aria-label="Last name" class="form-control">
+                <div class="mb-3 gap-2 align-items-center col-md-12">
+                    <input type="text" name="nombre" id="nombre" class="form-control" required>
                 </div>
 
+                <label for="apellido" class="form-label text-white">Apellido</label>
+                <div class="mb-3 gap-2 align-items-center col-md-12">
+                    <input type="text" name="apellido" id="apellido" class="form-control" required>
+                </div>
             </div>
 
             <div class="mb-3">
-                <label for="email" class="form-label text-white">Correo Electronico</label>
-                <input type="email" class="form-control" id="email" placeholder="nombre@example.com">
+                <label for="email" class="form-label text-white">Correo Electrónico</label>
+                <input type="email" name="email" class="form-control" id="email" placeholder="nombre@example.com"
+                    required>
             </div>
+
             <div class="mb-3">
                 <label for="mensaje" class="form-label text-white">Mensaje</label>
-                <textarea class="form-control" id="mensaje" rows="3" placeholder="Escriba aqui su consulta"></textarea>
+                <textarea class="form-control" name="mensaje" id="mensaje" rows="3"
+                    placeholder="Escriba aquí su consulta" required></textarea>
             </div>
+
             <div class="mb-3">
                 <button type="submit" class="btn btn-light w-100">Enviar</button>
-
             </div>
         </div>
     </form>
+
 
 
 
@@ -530,9 +569,4 @@
     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> <!-- stats.js lib -->
     <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
     <script src="js/circulo.js"></script>
-    <script src="js/dark.js" defer>
-    </script>
-
-</body>
-
-</html>
+    <script src="js/dark.js" defer></script>
