--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 
         <!-- Controles -->
         <div class="d-flex gap-3 align-items-center flex-grow-1">
-            <button id="playPause" class="btn btn-outline-success">▶</button>
+            <button id="playPause" class="btn btn-outline-primary">▶</button>
             <span id="currentTime">0:00</span>
             <input type="range" id="progress" class="form-range w-100" min="0" value="0">
             <span id="duration">0:00</span>
